Fix IE11 icon alignment on header and system overview
Made height and width changes to icons on app header
and system overview to properlu align icons in IE11.
Removes additional space in system overview quick
links.

Tested in Chrome, IE11, Safari, Edge.

--- a/app/common/styles/elements/quicklinks.scss
+++ b/app/common/styles/elements/quicklinks.scss
@@ -17,7 +17,7 @@
     text-decoration: none;
   }
 
-  p {
+  p, dl, dd {
     margin-bottom: 0;
   }
 
@@ -30,6 +30,10 @@
   padding: 1em 0 1em 0;
   border-bottom: 1px solid $border-color-01;
   position: relative;
+
+  .icon {
+    height: 1.5rem;
+  }
 
   &.no-icon {
     overflow: auto;
